--- a/config.toml
+++ b/config.toml
@@ -1,12 +1,8 @@
 baseURL = "https://example.com/"
-title = "Compose Docs"
+title = "Pandabweer"
 enableRobotsTXT = true
-# this example loads the theme as hugo module
-# comment out line below, and uncomment the line after it if you prefer to load the theme normally
-theme = ["github.com/onweru/compose"] # edit this if you'ld rather use a fork of this repo
-# theme = "compose"
+theme = ["github.com/onweru/compose"]
 enableGitInfo = true
-
 disableKinds = ["taxonomy", "taxonomyTerm"]
 
 [outputs]
