--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -4,7 +4,7 @@ mainSections = ["posts"] # use it for blog page section
 
 uniqueHomePage = true # change to false to add sidebar to homepage
 
-repo = "https://github.com/onweru/compose"
+repo = "https://github.com/Pandabweer/dpy-tutorial-site"
 
 time_format_blog = "Monday, January 02, 2006"
 time_format_default = "January 2, 2006"
@@ -21,17 +21,15 @@ codeLineNumbers = false
 
 # Site logo
 [logo]
-  lightMode = "images/compose.svg"
-  darkMode = "images/compose-light.svg"
+  lightMode = "images/logo-light.svg"
+  darkMode = "images/logo-dark.svg"
 
 [source]
   name = "GitHub"
   iconLight = "images/GitHubMarkLight.svg"
   iconDark = "images/GitHubMarkDark.svg"
-  url = "https://github.com/onweru/compose/"
+  url = "https://github.com/Pandabweer/dpy-tutorial-site"
 
-# optional
-# attribution. Feel free to delete this
 [author]
-  name = "Weru"
-  url = "https://neuralvibes.com/author/"
+  name = "Pandabweer | Updated 4/4/2022"
+  url = "https://github.com/Pandabweer"
